fixed margin spacings

--- a/src/App.css
+++ b/src/App.css
@@ -3,4 +3,5 @@
   font-family: 'Fredoka One', cursive;
   font-size: 32px;
   color: #800000;
+  margin-top: 150px;
 }
