--- a/src/Components/Time/time.css
+++ b/src/Components/Time/time.css
@@ -4,11 +4,11 @@
     border: 5px #800000 dotted;
     border-radius: 10px;
     padding: 10px;
-    width: 10%;
-    height: auto;
+    width: 150px;
+    height: 180px;
     transition: transform .2s;
     margin-left: 50px;
-    margin-top: 200px;
+    margin-top: 50px;
     float: left;
 }
 .local-time:hover {
