--- a/src/Components/Timezones/tz.css
+++ b/src/Components/Timezones/tz.css
@@ -5,11 +5,11 @@
     border-radius: 10px;
     padding: 10px;
     width: 150px;
-    height: auto;
+    height: 180px;
     transition: transform .2s;
     float: left;
     margin-left: 50px;
-    margin-top: 200px;
+    margin-top: 50px;
 }
 .tz-time:hover {
     transform: scale(1.5);
